--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 			<artifactId>jmf</artifactId>
 			<version>2.1.1e</version>
 		</dependency>
-		<!-- Needed for runtim -->
+		<!-- Needed for runtime -->
 		<dependency>
 			<groupId>javax.media</groupId>
 			<artifactId>jmf</artifactId>
@@ -41,6 +41,12 @@
 			<scope>system</scope>
 			<systemPath>C:/Program Files (x86)/JMF2.1.1e/lib/jmf.jar
 			</systemPath>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -115,6 +121,7 @@
 			<id>pinguet62</id>
 			<name>PINGUET Julien</name>
 			<email>pinguet62@gmail.com</email>
+			<url>https://github.com/pinguet62</url>
 			<roles>
 				<role>architect</role>
 				<role>developer</role>
